# advanced-analytics-framework

./: .gitattributes  .gitignore  .workflow-patcher.yml  SECURITY.md  advanced-analytics-framework-0.1.0-1.rockspec  advanced-analytics-framework-scm-1.rockspec  build_language_container.sh  conda.yml  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml  run_integration_tests.yaml  setup.py  version.py
.github/workflows/: build-and-publish.yml  build.yaml  cd.yml  check-code-generation.yml  check-packaging.yml  check-release-tag.yml  check_packaging.yaml  checks.yml  ci.yml  fast-tests.yml  gh-pages.yml  integration_tests_with_db.yaml  integration_tests_without_db.yaml  lua-checks.yml  lua-tests.yml  merge-gate.yml  pr-merge.yml  pytest.yaml  release.yaml  release_droid_upload_github_release_assets.yml  report.yml  run-tests.yml  slow-checks.yml  tests-integration-db.yml  tests-integration-no-db.yml  tests-matrix.yml  tests-unit.yml  unit_tests.yaml
doc/: conf.py  dependencies.md  design.md  index.rst  system_requirements.md
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.1.1.md  changes_0.2.0.md  changes_0.3.0.md  changes_0.4.0.md  changes_0.4.1.md  changes_0.5.0.md  changes_0.6.0.md  changes_0.6.1.md  changes_0.6.2.md  changes_0.7.0.md  unreleased.md
doc/design/: event-handler_overhead-evaluation.md  legend.puml  udf_discovery_and_communication.rst
doc/developer_guide/: developer_environment.md  developer_guide.md
doc/images/: sample_execution.drawio  system_design_diagram.drawio
doc/user_guide/: database_objects.md  proxies.md  udf-6.sql  user_guide.md
exasol/analytics/: __init__.py  deploy.py
exasol_advanced_analytics_framework/: bucketfs_operations.py  deploy.py  slc.py
exasol_advanced_analytics_framework/auto_udf/: __init__.py  code_collector.py  exa_que.py  exa_que_udf.py  udf_decorator.py
exasol_advanced_analytics_framework/context_wrapper/: context_wrapper_base.py  udf_context_wrapper.py
exasol_advanced_analytics_framework/deployment/: aaf_exasol_lua_script_generator.py  bundle_lua_scripts.py  constants.py  exasol_lua_script_generator.py  language_container_deployer.py  language_container_deployer_cli.py  lua_script_bundle.py  regenerate_scripts.py  scripts_deployer.py  scripts_deployer_cli.py  utils.py
exasol_advanced_analytics_framework/event_context/: event_context_base.py  mock_event_context.py  udf_event_context.py
exasol_advanced_analytics_framework/event_handler/: event_handler_base.py  event_handler_context.py  event_handler_result.py  event_handler_state.py
exasol_advanced_analytics_framework/example/: generator.py  query_handler.py  sql.jinja
exasol_advanced_analytics_framework/interface/: create_event_handler_udf.py
exasol_advanced_analytics_framework/query_handler/: python_query_handler_runner.py  query_handler.py  query_handler_base.py  query_handler_result.py  query_handler_state.py  result.py
exasol_advanced_analytics_framework/query_result/: mock_query_result.py  query_result.py  udf_query_result.py
exasol_advanced_analytics_framework/resource/: create_event_handler.jinja.sql  create_event_loop.jinja.sql
exasol_advanced_analytics_framework/temporary_operations/: temporary_bucketfs_file_manager.py  temporary_table_manager.py
exasol_advanced_analytics_framework/tensorflow/: distributed_training_udf.py
exasol_advanced_analytics_framework/testing/: mock_query_handler_runner.py  mock_sql_executor.py
exasol_advanced_analytics_framework/udf_communication/: all_gather_operation.py  background_listener.py  background_listener_run.py  background_peer_state.py  broadcast_operation.py  communicator.py  communicator_protocol.py  connection_info.py  distributed_udf.py  exchange_cluster_information.py  frontend_peer_state.py  gather_operation.py  get_peer_receive_socket_name.py  global_discovery_socket.py  global_discovery_strategy.py  global_peer_communicator.py  host_ip_addresses.py  ip_address.py  local_discovery.py  local_discovery_socket.py  local_discovery_strategy.py  local_peer_communicator.py  logger_thread.py  messages.py  peer_communicator.py  peer_sockets.py  retrieve_exasol_node_ip_address_udf.py  retrieve_exasol_node_ip_address_udf_deployer.py  serialization.py  socket_factory_context_manager_factory.py  udf_communicator.py  zmq_socket_factory_context_manager_factory.py
exasol_advanced_analytics_framework/udf_framework/: create_event_handler_udf.py  create_event_handler_udf_call.py  create_query_handler_udf.py  create_query_handler_udf_call.py  dynamic_modules.py  json_udf_query_handler_factory.py  query_handler_runner_state.py  query_handler_runner_udf.py  query_handler_runner_udf_call.py  udf_query_handler.py  udf_query_handler_factory.py
exasol_advanced_analytics_framework/utils/: udf_context_wrapper.py
exasol_data_science_utils_python/utils/: data_classes_runtime_type_check.py
exasol_machine_learning_library/stage_graph/: stage.py
githooks/: pre-commit
scripts/: activate_development_environment.sh  document_updater.py  export_lua_path.sh  install_conda_packages.sh  install_development_environment.sh  install_lua_dependencies.sh  install_lua_environment.sh  install_luarocks_packages.sh  install_micromamba.sh  lua_tests.sh  run_in_conda.sh  run_in_dev_env.sh  start_integration_test_environment.sh
test/: conftest.py
test/deployment/: test_aaf_exasol_lua_script_generator.py  test_scripts_deployer.py  test_scripts_deployer_cli.py
test/utils/: audit_table_utils.py  db_queries.py  test_utils.py
tests/: conftest.py  test_advanced_analytics_framework.py
tests/auto_udf/: fruit_lab.py
tests/deployment/: test_aaf_exasol_lua_script_generator.py  test_bundle_lua_scripts.py  test_exasol_lua_script_generator.py  test_language_container_deployer.py  test_language_container_deployer_cli.py  test_lua_script_bundle.py  test_scripts_deployer.py  test_scripts_deployer_cli.py
tests/event_context/: test_udf_event_context.py
tests/event_handler/: test_event_handler_context.py
tests/fixtures/: setup_database_fixture.py  upload_language_container_fixture.py
vagrant/: Vagrantfile
(+696 files in other folders)
