[tool.poetry]
name = "exasol-advanced-analytics-framework"
version = "0.1.0"
description = "Framework for building complex data analysis algorithms with Exasol"

packages = [
  {include = "exasol_advanced_analytics_framework"},
  {include = "exasol_data_science_utils_python"},
]

authors = [
    	"Umit Buyuksahin <umit.buyuksahin@exasol.com>",
    	"Torsten Kilias <torsten.kilias@exasol.com>"
]

readme = 'README.md'

repository = "https://github.com/exasol/advanced-analytics-framework"
homepage = "https://github.com/exasol/advanced-analytics-framework"


keywords = ['exasol']

# docutils                                   0.20.1    0.21.2
# exasol-bucketfs                            0.6.0     0.11.0
# exasol-integration-test-docker-environment 1.7.1     3.1.0
# importlib-resources                        5.13.0    6.4.0

# networkx                                   3.1       3.3
# nox                                        2023.4.22 2024.4.15
# numpy                                      1.24.4    2.0.0
# pandas                                     1.5.3     2.2.2
# poethepoet                                 0.13.1    0.27.0
# pydantic                                   1.10.17   2.7.4
# pytest                                     7.4.4     8.2.2
# pytest-cov                                 3.0.0     5.0.0
# pyzmq                                      24.0.1    26.0.3
# structlog                                  22.3.0    24.2.0
# typeguard                                  2.13.3    4.3.0

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Jinja2 = "^3.0.3"
importlib-resources = "^6.4.0"
exasol-bucketfs = ">=0.6.0,<1.0.0"
click = "^8.0.4"
pyexasol = "^0.25.0"
pandas = "^1.1.0"
pydantic = "^1.10.2"
pyzmq = "^26.0.3"
sortedcontainers = "^2.4.0"
structlog = "^24.2.0"
typeguard = "<3.0.0"
nox = "^2024.4.15"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.2"
pytest-assume = "^2.4.3"
exasol-udf-mock-python = ">=0.2.0,<1.0.0"
pytest-cov = "^5.0.0"
exasol-integration-test-docker-environment = "1.7.1"
polyfactory = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest-repeat = "^0.9.1"
elasticsearch = "^8.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
