[project]
name = "exasol-advanced-analytics-framework"
version = "0.7.0"
description = "Framework for building complex data analysis algorithms with Exasol"
authors = [
    { name = "Umit Buyuksahin", email = "umit.buyuksahin@exasol.com" },
    { name = "Torsten Kilias", email = "torsten.kilias@exasol.com" },
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
keywords = ["exasol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "jinja2>=3.1.6,<4",
    "importlib-resources>=6.5.2,<7",
    "exasol-bucketfs>=1.0.1,<3",
    "click>=8.1.8,<9",
    "pyexasol>=0.25.0,<2",
    "pandas>=2.2.3,<3",
    "pydantic>=2.10.6,<3",
    "pyzmq>=26.2.1,<27",
    "sortedcontainers>=2.4.0,<3",
    "structlog>=25.1.0,<26",
    "typeguard>=4.4.1,<5",
    "nox>=2025.2.9,<2026",
    "joblib>=1.4.2,<2",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [
  {include = "exasol"},
]

[project.urls]
repository = "https://github.com/exasol/advanced-analytics-framework"
homepage = "https://github.com/exasol/advanced-analytics-framework"

[dependency-groups]
dev = [
    "pytest>=7,<9",
    "pytest-assume>=2.4.3,<3",
    "exasol-udf-mock-python>=0.2.0,<1.0.0",
    "pytest-cov>=5.0.0,<6",
    "exasol-integration-test-docker-environment>=5,<6",
    "polyfactory>=2.19.0,<3",
    "pytest-repeat>=0.9.3",
    "elasticsearch>=8.17.1,<9",
    "exasol-toolbox>=6.0.0,<7",
    "exasol-python-extension-common>=0.12.0,<1.0.0",
    "exasol-script-languages-container-tool>1,<4",
    "pytest-exasol-slc>=0.1.0,<1.0.0",
    "pytest-exasol-backend>=0.3.0,<2",
    "pytest-exasol-extension>=0.1.0,<1.0.0",
    "types-networkx>=3.5.0.20250728,<4",
    "pandas-stubs>=2.3.0.250703,<3",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    # no py.typed file yet
    "pyexasol.*",
    "exasol_udf_mock_python.*",
    "exasol.python_extension_common.*", # typed from 0.9.0
    # not type checking yet
    "test.*",
    # no stubs available as of 2025
    "joblib.*",
    # fix typing on these files
    "exasol.analytics.query_handler.graph.execution_graph"
]
ignore_errors = true
follow_untyped_imports = true

[tool.pylint.master]
fail-under = 6.0

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.sonar]
projectKey = "com.exasol:advanced-analytics-framework"
host.url = "https://sonarcloud.io"
organization = "exasol"

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D",  # Docstring rules
]
extend-select = ["F401"]
unfixable = []

# See https://github.com/exasol/advanced-analytics-framework/issues/319
[tool.coverage.report]
ignore_errors = true
